Solved margin on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -876,7 +876,7 @@ section{
     }
 }
 
-@media only screen and (max-device-width: 767px){
+@media only screen and (max-device-width: 500px){
     .body{
         overflow-x: hidden;
         overflow-y: auto;
@@ -922,8 +922,8 @@ section{
         margin-bottom:10vh;
         .left-header{
             display: flex;
-            width: 60vw;
-            height: 60vh;
+            width: 50vw;
+            height: 50vh;
             position: relative;
             top: 0;
             left:0;
@@ -945,7 +945,7 @@ section{
             }
             p{
                 font-size: 1rem;
-                line-height: 1rem;
+                line-height: 1.3rem;
             }
         }
         .main-btn{
@@ -965,19 +965,21 @@ section{
     }
 
     .card{
-        width: 100vh;
-        height: 58vh;
+        width: 30vh;
+        height: 40vh;
     }
 
     
     .section{
-        padding: 13vh;
-        text-align: center;
+       padding: 4vh;
+       overflow: hidden;
+       text-align: center;
        width: 100%;
        
     }
     .about{
         margin-bottom: 15vh;
+        padding: 5vh 8vh;
     }
     .about-container{
         display: flex;
@@ -1031,8 +1033,12 @@ section{
             }
         }
     }
-    .contact{
+    .contacts{
         margin-bottom: 10vh;
+        padding: 5vh 8vh;
+    }
+    .contact{
+        
         .contact-content{
             p{
                 font-size: 1.1rem;
@@ -1041,6 +1047,7 @@ section{
         .contact-container{
             .contact-info{
                 font-size: 1.1rem;
+                text-align: left;
             }
             .form-input-box{
                 width: 100%;
@@ -1048,6 +1055,9 @@ section{
         }
     }
 
+    .projects-container{
+        padding: 5vh 8vh;
+    }
     .projects-abstract{
         p{
             font-size: 1.1rem;
